# jni

./: CMakeLists.txt  README.md
src/cpp/: App.cpp  App.h  jni.cpp  jni.h
src/java/: App.java
